added groups of projects and new images from template